# CESI_POO_Workshop

./: CMakeLists.txt  Carre.cpp  Carre.h  ChainObjet2D.cpp  ChainObjet2D.h  NewChainObjet2D.cpp  NewChainObjet2D.h  Objet2D.cpp  Objet2D.h  README.md  Rectangle.cpp  Rectangle.h  main.cpp
